# Insight

./: .cproject  .gitignore  .gitreview  .project  .styleguide  CMakeLists.txt  COPYING  IPSettings.txt  Insight.pro  LICENSE.txt  Makefile  README.md  Resources.rc  project.config  publish-win32.sh
Debug/: IPSettings.txt
Release/: IPSettings.txt
host/: Insight.cpp  Insight.hpp
src/: GLWindow.cpp  GLWindow.hpp  Main.cpp  MainClass.cpp  MainClass.hpp  MainWindow.cpp  MainWindow.hpp  ProcessorClass.cpp  ProcessorClass.hpp  Resource.h  Resources.rc  Resources.res  Settings.cpp  Settings.hpp  Util.cpp  Util.hpp  Vector.hpp
src/ImageProcess/: FindTarget2013.cpp  FindTarget2013.hpp  FindTarget2014-a.cpp  FindTarget2014-a.hpp  FindTarget2014.cpp  FindTarget2014.hpp  FindTarget2016.cpp  FindTarget2016.hpp  GRIPPrototype.cpp  ProcBase.cpp  ProcBase.hpp  quad_t.c  quad_t.h
src/MJPEG/: ClientBase.cpp  ClientBase.hpp  ImageScale.cpp  ImageScale.hpp  MjpegClient.cpp  MjpegClient.hpp  MjpegServer.cpp  MjpegServer.hpp  MjpegStream.cpp  MjpegStream.hpp  MjpegStreamCallback.cpp  MjpegStreamCallback.hpp  VideoStream.cpp  VideoStream.hpp  WebcamClient.cpp  WebcamClient.hpp  WindowCallbacks.hpp  WpiClient.cpp  WpiClient.hpp  mjpeg_mutex.c  mjpeg_mutex.h  mjpeg_sck.c  mjpeg_sck.cpp  mjpeg_sck.h  mjpeg_sck.hpp  mjpeg_sck_selector.cpp  mjpeg_sck_selector.hpp  mjpeg_sleep.c  mjpeg_sleep.h  mjpeg_thread.c  mjpeg_thread.h  mjpegrx.c  mjpegrx.cpp  mjpegrx.h  mjpegrx.hpp  mjpegrx_thread.c  mjpegrx_thread.h  stb_image.c  stb_image_write.c  stb_image_write.h  (+2 more)
src/SFMLGraphics/: Image.cpp
(+31 files in other folders)
